containers/doc/server-kubernetes/server.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: uyuni
  name: uyuni
spec:
  containers:
  - name: uyuni
    image: registry.opensuse.org/systemsmanagement/uyuni/master/servercontainer/containers/uyuni/server:latest
    securityContext:
      capabilities:
        add:
          - SYS_ADMIN
    ports:
      - containerPort: 443
      - containerPort: 80
      - containerPort: 4505
      - containerPort: 4506
      - containerPort: 69
        protocol: UDP
      - containerPort: 25151
      - containerPort: 5432
      - containerPort: 8000
      - containerPort: 8001
    resources: {}
    volumeMounts:
      - mountPath: /run
        name: tmp
      - mountPath: /sys/fs/cgroup
        name: cgroup
      - mountPath: /var/lib/pgsql
        name: var-pgsql
      - mountPath: /var/cache
        name: var-cache
      - mountPath: /var/spacewalk
        name: var-spacewalk
      - mountPath: /var/log
        name: var-log
      - mountPath: /srv/salt
        name: srv-salt
      - mountPath: /srv/www/htdocs/pub
        name: srv-www-pub
      - mountPath: /srv/www/cobbler
        name: srv-www-cobbler
      - mountPath: /srv/www/os-images
        name: srv-www-osimages
      - mountPath: /srv/tftpboot
        name: srv-tftpboot
      - mountPath: /srv/formula_metadata
        name: srv-formulametadata
      - mountPath: /srv/pillar
        name: srv-pillar
      - mountPath: /srv/susemanager
        name: srv-susemanager
      - mountPath: /srv/spacewalk
        name: srv-spacewalk
      - mountPath: /root
        name: root
      - mountPath: /etc/apache2
        name: etc-apache2
      - mountPath: /etc/rhn
        name: etc-rhn
      - mountPath: /etc/systemd/system/multi-user.target.wants
        name: etc-systemd
      - mountPath: /etc/salt
        name: etc-salt
      - mountPath: /etc/tomcat
        name: etc-tomcat
      - mountPath: /etc/cobbler
        name: etc-cobbler
      - mountPath: /etc/sysconfig
        name: etc-sysconfig
      - mountPath: /etc/pki/tls
        name: etc-tls
      - name: ca-cert
        mountPath: /etc/pki/trust/anchors/LOCAL-RHN-ORG-TRUSTED-SSL-CERT
        readOnly: true
        subPath: ca.crt
      - name: tls-key
        mountPath: /etc/pki/spacewalk-tls
      - name: uyuni-config
        mountPath: /root/setup_env.sh
        readOnly: true
        subPath: setup_env.sh
  volumes:
  - name: tmp
    emptyDir:
      medium: Memory
      sizeLimit: 256Mi
  - name: cgroup
    hostPath:
      path: /sys/fs/cgroup
      type: Directory
  - name: var-pgsql
    persistentVolumeClaim:
      claimName: var-pgsql
  - name: var-cache
    persistentVolumeClaim:
      claimName: var-cache
  - name: var-spacewalk
    persistentVolumeClaim:
      claimName: var-spacewalk
  - name: var-log
    persistentVolumeClaim:
      claimName: var-log
  - name: srv-salt
    persistentVolumeClaim:
      claimName: srv-salt
  - name: srv-www-pub
    persistentVolumeClaim:
      claimName: srv-www-pub
  - name: srv-www-cobbler
    persistentVolumeClaim:
      claimName: srv-www-cobbler
  - name: srv-www-osimages
    persistentVolumeClaim:
      claimName: srv-www-osimages
  - name: srv-tftpboot
    persistentVolumeClaim:
      claimName: srv-tftpboot
  - name: srv-formulametadata
    persistentVolumeClaim:
      claimName: srv-formulametadata
  - name: srv-pillar
    persistentVolumeClaim:
      claimName: srv-pillar
  - name: srv-susemanager
    persistentVolumeClaim:
      claimName: srv-susemanager
  - name: srv-spacewalk
    persistentVolumeClaim:
      claimName: srv-spacewalk
  - name: root
    persistentVolumeClaim:
      claimName: root
  - name: etc-apache2
    persistentVolumeClaim:
      claimName: etc-apache2
  - name: etc-rhn
    persistentVolumeClaim:
      claimName: etc-rhn
  - name: etc-systemd
    persistentVolumeClaim:
      claimName: etc-systemd
  - name: etc-salt
    persistentVolumeClaim:
      claimName: etc-salt
  - name: etc-tomcat
    persistentVolumeClaim:
      claimName: etc-tomcat
  - name: etc-cobbler
    persistentVolumeClaim:
      claimName: etc-cobbler
  - name: etc-sysconfig
    persistentVolumeClaim:
      claimName: etc-sysconfig
  - name: ca-cert
    configMap:
      name: uyuni-ca
  - name: etc-tls
    persistentVolumeClaim:
      claimName: etc-tls
  - name: tls-key
    secret:
      secretName: uyuni-cert
      items:
        - key: tls.crt
          path: spacewalk.crt
        - key: tls.key
          path: spacewalk.key
          mode: 0600
  - name: uyuni-config
    configMap:
      name: uyuni-config
  dnsPolicy: ClusterFirst
  restartPolicy: Always
