containers/doc/server-kubernetes/k3s-ingress-routes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: uyuni-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgresql-router
spec:
  entryPoints:
    - postgres
  routes:
    - match: HostSNI(`*`)
      services:
      - name: uyuni-tcp
        port: 5432
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: salt-publish-router
spec:
  entryPoints:
    - salt-publish
  routes:
    - match: HostSNI(`*`)
      services:
      - name: uyuni-tcp
        port: 4505
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: salt-request-router
spec:
  entryPoints:
    - salt-request
  routes:
    - match: HostSNI(`*`)
      services:
      - name: uyuni-tcp
        port: 4506
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: cobbler-router
spec:
  entryPoints:
    - cobbler
  routes:
    - match: HostSNI(`*`)
      services:
      - name: uyuni-tcp
        port: 25151
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: tomcat-debug-router
spec:
  entryPoints:
    - tomcat-debug
  routes:
    - match: HostSNI(`*`)
      services:
      - name: uyuni-tcp
        port: 8000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: tasko-debug-router
spec:
  entryPoints:
    - tasko-debug
  routes:
    - match: HostSNI(`*`)
      services:
      - name: uyuni-tcp
        port: 8001
