containers/doc/server-kubernetes/nginx-uyuni-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: uyuni-ingress-ssl
spec:
  tls:
    - hosts:
      - uyuni-dev.world-co.com
      secretName: uyuni-cert
  rules:
  - host: uyuni-dev.world-co.com
    http:
      paths:
      - backend:
          service:
            name: uyuni-tcp
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: uyuni-ingress-nossl
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: uyuni-dev.world-co.com
    http:
      paths:
      - backend:
          service:
            name: uyuni-tcp
            port:
              number: 80
        path: /pub
        pathType: Prefix
      - backend:
          service:
            name: uyuni-tcp
            port:
              number: 80
        path: /rhn/([^/])+/DownloadFile
        pathType: Prefix
      - backend:
          service:
            name: uyuni-tcp
            port:
              number: 80
        path: /(rhn/)?rpc/api
        pathType: Prefix
      - backend:
          service:
            name: uyuni-tcp
            port:
              number: 80
        path: /rhn/errors
        pathType: Prefix
      - backend:
          service:
            name: uyuni-tcp
            port:
              number: 80
        path: /rhn/ty/TinyUrl
        pathType: Prefix
      - backend:
          service:
            name: uyuni-tcp
            port:
              number: 80
        path: /rhn/websocket
        pathType: Prefix
      - backend:
          service:
            name: uyuni-tcp
            port:
              number: 80
        path: /rhn/metrics
        pathType: Prefix
      - backend:
          service:
            name: uyuni-tcp
            port:
              number: 80
        path: /cobbler_api
        pathType: Prefix
      - backend:
          service:
            name: uyuni-tcp
            port:
              number: 80
        path: /cblr
        pathType: Prefix
      - backend:
          service:
            name: uyuni-tcp
            port:
              number: 80
        path: /httpboot
        pathType: Prefix
      - backend:
          service:
            name: uyuni-tcp
            port:
              number: 80
        path: /images
        pathType: Prefix
      - backend:
          service:
            name: uyuni-tcp
            port:
              number: 80
        path: /cobbler
        pathType: Prefix
      - backend:
          service:
            name: uyuni-tcp
            port:
              number: 80
        path: /os-images
        pathType: Prefix
      - backend:
          service:
            name: uyuni-tcp
            port:
              number: 80
        path: /tftp
        pathType: Prefix
      - backend:
          service:
            name: uyuni-tcp
            port:
              number: 80
        path: /docs
        pathType: Prefix
